[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/day_3/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PauseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.0
offset_right = 20.0
offset_bottom = 7.0
text = "Pause"

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
